test/hlt/test_case/func_arg_test/result_repl_mode.txt
Result for test_case/func_arg_test/test_func_arg.py:
======[pikapython packages installed]======
pikascript-core==v1.13.3 (2024/05/25 01:26:44)
PikaStdLib===v1.13.3
time===v0.2.2
===========================================
~~~/ POWERED BY \~~~
~  pikapython.com  ~
~~~~~~~~~~~~~~~~~~~~
hello pikascript
>>> def test_function_arguments(a, b=2, *args, **kwargs):
...     print("a:", a)
...     print("b:", b)
...     print("*args:", args)
...     print("**kwargs:", kwargs)
... 
>>> print('======= Test Start =======')
======= Test Start =======
>>> print("\nTest function: test_function_arguments(a, b=2, *args, **kwargs)")
Test function: test_function_arguments(a, b=2, *args, **kwargs)
>>> print("\nFunction arguments test:")
Function arguments test:
>>> test_function_arguments(1)
a: 1
b: 2
*args: ()
**kwargs: {}
>>> test_function_arguments(1, 3)
a: 1
b: 2
*args: (3,)
**kwargs: {}
>>> test_function_arguments(1, 3, 4, 5, 6)
a: 1
b: 2
*args: (3, 4, 5, 6)
**kwargs: {}
>>> test_function_arguments(1, 3, 4, 5, 6, x=7, y=8)
a: 1
b: 2
*args: (3, 4, 5, 6)
**kwargs: {'177693': 7, '177694': 8}
>>> print("\nFunction arguments test with keyword arguments:")
Function arguments test with keyword arguments:
>>> # below codes will failed while compiling:
... # test_function_arguments(a=1)
>>> # test_function_arguments(a=1, b=3)
>>> # test_function_arguments(a=1, b=3, x=7, y=8)
>>> print('======= Test End =======')
Error: line buff overflow, please use bigger 'PIKA_LINE_BUFF_SIZE'
